[package]
name = "transaction_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
calamine = "0.25.0"
pdf-extract = "0.7.7"
regex = "1.10.6"
rust_xlsxwriter = "0.73.0"
tokio = { version = "1.39.2", features = ["full"] }

[lib]
name = "transaction_manager"
path = "src/lib.rs"

[[bin]]
name = "transaction_manager"
path = "src/main.rs"