[package]
name = "transaction_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
calamine = "0.25.0"
derive = "1.0.0"
features = "0.10.0"
mockito = "1.5.0"
regex = "1.10.6"
reqwest = { version = "0.12.5", features = ["json", "multipart"] }
rust_xlsxwriter = "0.73.0"
serde = {version = "1.0.208", features = ["derive"]}
serde_json = "1.0.125"
tokio = { version = "1.39.2", features = ["full", "test-util"] }

[lib]
name = "transaction_manager"
path = "src/lib.rs"


[[bin]]
name = "transaction_manager"
path = "src/main.rs"
